fix comment form alignment

--- a/client/style.css
+++ b/client/style.css
@@ -51,4 +51,5 @@
 #comment {
   position: absolute;
   left: 20%;
+  top: 360px;
 }
